--- a/modulo1/settimana1/giorno2/index.html
+++ b/modulo1/settimana1/giorno2/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-       <img src="img\logo.svg" width="250px" alt="Errore di caricamento del logo"></img>
+       <img src="assets/img/logo.svg" width="250px" alt="Errore di caricamento del logo"></img>
         <h1>Epicode - il blog dei developers</h1>
     </header>
     <div nav>
