--- a/modulo1/settimana1/giorno5/index.html
+++ b/modulo1/settimana1/giorno5/index.html
@@ -19,7 +19,7 @@
 
     <header>
 
-      <img src="assets/images/logo.png" alt="logo - Epicode" />
+      <img src="assets/images/logo.png" alt="logo - Epicode bv " />
 
     </header>
 
