--- a/modulo2/settimana2/giorno1/index.html
+++ b/modulo2/settimana2/giorno1/index.html
@@ -70,17 +70,72 @@
       <div class="container">
         <div class="row offset text-center">
           <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 bg-success text-white p-3 border border-dark">
-            Colonna 1
+            Small
           </div>
           <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 bg-success text-white p-3 border border-dark">
-            Colonna 2
+            sm
           </div>
           <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 bg-success text-white p-3 border border-dark">
-            Colonna 3
+            ≥576px
           </div>
         </div>
       </div>
-      
+
+      <div class="container">
+        <div class="row offset text-center">
+          <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 bg-success text-white p-3 border border-dark">
+            Medium
+          </div>
+          <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 bg-success text-white p-3 border border-dark">
+            md
+          </div>
+          <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 bg-success text-white p-3 border border-dark">
+            ≥768px
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row offset text-center">
+          <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 bg-success text-white p-3 border border-dark">
+            large
+          </div>
+          <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 bg-success text-white p-3 border border-dark">
+            lg
+          </div>
+          <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 bg-success text-white p-3 border border-dark">
+            ≥992px
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row offset text-center">
+          <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 bg-success text-white p-3 border border-dark">
+            Extra large
+          </div>
+          <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 bg-success text-white p-3 border border-dark">
+            xl
+          </div>
+          <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 bg-success text-white p-3 border border-dark">
+            ≥1200px
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row offset text-center">
+          <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 bg-success text-white p-3 border border-dark">
+            Extra extra large
+          </div>
+          <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 bg-success text-white p-3 border border-dark">
+            xxl
+          </div>
+          <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 col-xl-4 bg-success text-white p-3 border border-dark">
+            ≥1400px
+          </div>
+        </div>
+      </div>
 
       <div class="container">
         <div class="row">
