--- a/modulo2/settimana3/WeekProject/details.html
+++ b/modulo2/settimana3/WeekProject/details.html
@@ -22,8 +22,18 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="./main.html">Home</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Cart
+                    </a>
+                    <ul id="cartDropdown" class="dropdown-menu">
+                      <li> </li>
+                      <li> </li>
+                      <li>
+                        <hr class="dropdown-divider">
+                      </li>
+                      <li><a id="cartDropdown" class="dropdown-item" href="#"></a></li>
+                    </ul>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="backOffice.html">backOffice (MOD)<i class="fa-solid fa-triangle-exclamation fa-fade text-danger"></i></a>
@@ -39,7 +49,7 @@
         <div class="flex-grow-1">
             <div class="container">
                 <div class="row">
-                    <div class="col-10 d-flex flew-column align-items-center"
+                    <div class="col-12 d-flex flew-column align-items-center"
                     id="colDet">
                 </div>
                 </div>
