--- a/modulo2/settimana3/WeekProject/main.html
+++ b/modulo2/settimana3/WeekProject/main.html
@@ -51,15 +51,15 @@
                 </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Generali
+                    Cart
                   </a>
-                  <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Offerte</a></li>
-                    <li><a class="dropdown-item" href="#">Codice Promozionale</a></li>
+                  <ul id="cartDropdown" class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#"></a></li>
+                    <li><a class="dropdown-item" href="#"></a></li>
                     <li>
                       <hr class="dropdown-divider">
                     </li>
-                    <li><a class="dropdown-item" href="#">Cart</a></li>
+                    <li><a id="cartDropdown" class="dropdown-item" href="#"></a></li>
                   </ul>
                 </li>
               </ul>
