--- a/modulo3/settimana1/WeekProject/index.html
+++ b/modulo3/settimana1/WeekProject/index.html
@@ -10,7 +10,8 @@
   </head>
   <body class="bg-dark text-light text-center ">
 
-        <h1 class="py-5">WOW CHE IPHONE :)</h1>
+        <h1 class="py-4">WOW CHE IPHONE :)</h1>
+        <h4 class="my-4">Un programmatore che si veste a caso, si sta Prepa...Random()</h4>
     <div class="demo">  
         
         <div class="demo__phone">
