--- a/modulo2/settimana2/WeekProject/netflixHP.html
+++ b/modulo2/settimana2/WeekProject/netflixHP.html
@@ -474,7 +474,7 @@
         </div>
         <button class="btn btn-sm text-light rounded-0 border border-1 border-light mt-4 mb-3">Service
             Code</button>
-        <p class="text-secondary">C 1997 - 2019 Netflix, Inc. {i-0d00fcda2fdf9c0de}</p>
+        <p class="text-secondary">C 1997 - 2019 Netflix, Inc. </p>
     </div>
   </main>
 
